Process flow segragation

--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -120,38 +120,8 @@
 
 <div *ngIf="contextMenuStyle" class="available-nodes-dropdown bg-white position-fixed border rounded"
     [ngStyle]="contextMenuStyle" odpClickOutside (outside)="contextMenuStyle=null">
-    <div *ngIf="isProcessFlow">
-        <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
-            (click)="addNode($event,'SYSTEM')">
-            <div class="d-flex align-items-center">
-                <span class="node-icon font-16 fw-400 dsi dsi-flow mr-2"></span>
-                <span class="font-13 fw-400">System Task</span>
-            </div>
-        </div>
-        <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
-            (click)="addNode($event,'USER')">
-            <div class="d-flex align-items-center">
-                <span class="node-icon font-16 fw-400 dsi dsi-flow mr-2"></span>
-                <span class="font-13 fw-400">User Task</span>
-            </div>
-        </div>
-        <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
-            (click)="addNode($event,'EVENT')">
-            <div class="d-flex align-items-center">
-                <span class="node-icon font-16 fw-400 dsi dsi-flow mr-2"></span>
-                <span class="font-13 fw-400">Event Trigger</span>
-            </div>
-        </div>
-        <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
-            (click)="addNode($event,'DECISION')">
-            <div class="d-flex align-items-center">
-                <span class="node-icon font-16 fw-400 dsi dsi-flow mr-2"></span>
-                <span class="font-13 fw-400">Decision</span>
-            </div>
-        </div>
-    </div>
     <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
-        *ngIf="!isProcessFlow">
+        >
         <div class="d-flex align-items-center">
             <span class="node-icon font-16 fw-400 dsi dsi-file mr-2"></span>
             <span class="font-13 fw-400">File</span>
@@ -175,7 +145,7 @@
         </div>
     </div>
     <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
-        *ngIf="!isProcessFlow">
+       >
         <div class="d-flex align-items-center">
             <span class="node-icon font-16 fw-400 dsi dsi-invoke-api mr-2"></span>
             <span class="font-13 fw-400">API</span>
@@ -209,7 +179,7 @@
         </div>
     </div>
     <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
-        *ngIf="!isProcessFlow">
+       >
         <div class="d-flex align-items-center">
             <span class="node-icon font-16 fw-400 dsi dsi-function alt mr-2"></span>
             <span class="font-13 fw-400">Process</span>
@@ -233,7 +203,7 @@
         </div>
     </div>
     <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center justify-content-between hover"
-        *ngIf="!isProcessFlow">
+       >
         <div class="d-flex align-items-center">
             <span class="node-icon font-16 fw-400 dsi dsi-join mr-2"></span>
             <span class="font-13 fw-400">Transform</span>
@@ -354,11 +324,11 @@
         <span class="font-13 fw-400">Decision</span>
     </div> -->
     <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center hover"
-        (click)="addNode($event,'PLUGIN')" *ngIf="!isProcessFlow">
+        (click)="addNode($event,'PLUGIN')" >
         <span class="node-icon font-16 fw-400 dsi dsi-api-doc text-info mr-2"></span>
         <span class="font-13 fw-400">Plugin</span>
     </div>
-    <div *ngIf="!hasErrorNode && !isProcessFlow" class="node-item pl-3 pr-2 py-2 d-flex align-items-center hover"
+    <div *ngIf="!hasErrorNode" class="node-item pl-3 pr-2 py-2 d-flex align-items-center hover"
         (click)="addNode($event,'ERROR')">
         <span class="node-icon font-16 fw-400 dsi dsi-danger-circle text-danger mr-2"></span>
         <span class="font-13 fw-400">Global Error</span>
