--- a/src/app/home/b2b-flows-manage/node-properties/converter-properties/format-selector/format-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/converter-properties/format-selector/format-selector.component.html
@@ -1,23 +1,23 @@
 <div class="">
-    <odp-search-box [fullWidth]="true" [open]="true" (reset)="clearSearch()"
+    <odp-search-box [fullWidth]="true" [open]="true" (reset)="clearSearch()" [edit]="edit"
         (enteredText)="searchFormat($event)"></odp-search-box>
     <div class="list-group list-group-flush">
-        <div class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover"
+        <div class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover" 
             *ngFor="let item of formatList" (click)="toggleItem(!item._selected,item)">
             <div class="list-item-format-name d-flex align-items-center flex-fill">
-                <odp-round-radio [edit]="{status:true}" [checked]="item._selected">
+                <odp-round-radio [edit]="edit" [checked]="item._selected">
                 </odp-round-radio>
                 <span class="ml-3">{{item.name}}</span>
             </div>
             <span class="list-item-attribute-count text-right">{{item.attributeCount}}</span>
             <span class="list-item-format-type text-right">{{item.formatType}}</span>
         </div>
-        <div *ngIf="!formatList || formatList.length == 0"
+        <div *ngIf="!formatList || formatList.length == 0 || !edit.status"
             class="list-group-item d-flex align-items-center justify-content-between text-secondary">
             No Data Format found
         </div>
     </div>
-    <div class="d-flex justify-content-center border-top">
+    <div class="d-flex justify-content-center border-top" *ngIf="edit.status">
         <button type="button" class="btn btn-dark m-3" (click)="selectFormat()">Select Format</button>
     </div>
 </div>
