--- a/src/app/home/b2b-flows-manage/node-properties/converter-properties/source-selector/source-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/converter-properties/source-selector/source-selector.component.html
@@ -15,7 +15,7 @@
             No source attached
         </div>
     </div>
-    <div class="d-flex justify-content-center border-top">
+    <div class="d-flex justify-content-center border-top" *ngIf="edit.status">
         <button type="button" class="btn btn-dark m-3" (click)="selectSource()">Select source</button>
     </div>
 </div>
