--- a/src/app/home/b2b-flows-manage/node-properties/node-data-selector/node-data-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-data-selector/node-data-selector.component.html
@@ -143,7 +143,7 @@
             <odp-node-data-selector *ngIf="openSelector" [currNode]="currNode" [(toggle)]="openSelector" [edit]="edit" (valueChange)="insertText.emit($event)">
             </odp-node-data-selector>
             <input *ngIf="!textarea" id="customValue" [type]="number?'number':'text'" class="form-control"
-                [(ngModel)]="configuredData.customValue" odpAutoFocus (keydown.delete)="$event.stopPropagation();">
+                [(ngModel)]="configuredData.customValue" odpAutoFocus (keydown.delete)="$event.stopPropagation();" [readonly]="!edit.status">
             <odp-code-editor *ngIf="textarea" type="json" [edit]="edit" [insertText]="insertText"
                 [(code)]="configuredData.customValue"></odp-code-editor>
             <!-- <textarea *ngIf="textarea" id="customValue" rows="5" cols="20" type="text" class="form-control"
